identityapi-chart/templates/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: identityapi
spec:
  parentRefs:
  - name: tmsolution-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    - path:
        type: PathPrefix
        value: /account
    backendRefs:
    - kind: Service
      name: identityapi
      port: 8080
      weight: 1000
